DDF-3463 Adds new plugin point to update SAML assertions prior to re-sign (#2755)
(cherry picked from commit b7b9e4b)